--- a/app.json
+++ b/app.json
@@ -30,12 +30,12 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/Logo.svg",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#0d0d0d",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#0d0d0d"
           }
         }
       ]
