--- a/app.json
+++ b/app.json
@@ -8,6 +8,12 @@
     "scheme": "groceryaonboard",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/images/Logo.svg",
+      "imageWidth": 200,
+      "resizeMode": "contain",
+      "backgroundColor": "#0d0d0d"
+    },
     "ios": {
       "supportsTablet": true
     },
