--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,16 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"],
+      "@/constants": ["./constants/index"],
+      "@/components/ui": ["./components/ui"],
+      "@/components": ["./components"],
+      "@/hooks": ["./hooks"],
+      "@/navigation": ["./navigation"],
+      "@/screens": ["./screens"],
+      "@/services": ["./services"],
+      "@/utils": ["./utils"]
     }
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
