--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "types/**/*.d.ts"
+    "types/**/*.d.ts",
+    "index.js"
   ]
 }
